<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gold"
    tools:context=".SignInActivity">



    <ImageView
        android:id="@+id/sign_in_activity_iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_real_estate"
        android:layout_margin="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/sign_in_activity_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:inputType="textEmailAddress"
        android:background="@color/Edit_text_color"
        android:textSize="30sp"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_activity_iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/sign_in_activity_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/Edit_text_color"
        android:inputType="textPassword"
        android:textSize="30sp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_activity_et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sign_in_activity_tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forget_your_password"
        android:textStyle="bold"
        android:textScaleX="1.2"
        app:layout_constraintTop_toBottomOf="@id/sign_in_activity_et_password"
        app:layout_constraintEnd_toEndOf="@id/sign_in_activity_et_password"
        />

    <Button
        android:id="@+id/sign_in_activity_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@color/orange"
        android:text="@string/login"
        android:textScaleX="2"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_activity_tv_forget_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sign_in_activity_tv_have_not_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center_horizontal"
        android:text="@string/dont_have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sign_in_activity_tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_under_line"
        app:layout_constraintTop_toTopOf="@+id/sign_in_activity_tv_have_not_account"
        app:layout_constraintStart_toEndOf="@id/sign_in_activity_tv_have_not_account"/>





</androidx.constraintlayout.widget.ConstraintLayout>